server/build_output.txt
   Compiling unicode-ident v1.0.12
   Compiling cfg-if v1.0.0
   Compiling bytes v1.6.0
   Compiling pin-project-lite v0.2.14
   Compiling fnv v1.0.7
   Compiling itoa v1.0.11
   Compiling futures-core v0.3.30
   Compiling memchr v2.7.2
   Compiling num_cpus v1.16.0
   Compiling futures-sink v0.3.30
   Compiling windows_x86_64_msvc v0.52.5
   Compiling windows_x86_64_msvc v0.48.5
   Compiling typenum v1.17.0
   Compiling futures-io v0.3.30
   Compiling tinyvec_macros v0.1.1
   Compiling log v0.4.21
   Compiling windows-targets v0.52.5
   Compiling windows-targets v0.48.5
   Compiling getrandom v0.2.15
   Compiling tinyvec v1.6.0
   Compiling proc-macro2 v1.0.84
   Compiling subtle v2.5.0
   Compiling windows-sys v0.48.0
   Compiling windows-sys v0.52.0
   Compiling percent-encoding v2.3.1
   Compiling slab v0.4.9
   Compiling generic-array v0.14.7
   Compiling hashbrown v0.14.5
   Compiling unicode-bidi v0.3.15
   Compiling futures-task v0.3.30
   Compiling equivalent v1.0.1
   Compiling pin-utils v0.1.0
   Compiling once_cell v1.19.0
   Compiling form_urlencoded v1.2.1
   Compiling rand_core v0.6.4
   Compiling ppv-lite86 v0.2.17
   Compiling unicase v2.7.0
   Compiling http v0.2.12
   Compiling quote v1.0.36
   Compiling mime v0.3.17
   Compiling cpufeatures v0.2.12
   Compiling futures-channel v0.3.30
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.6
   Compiling rand_chacha v0.3.1
   Compiling syn v2.0.66
   Compiling syn v1.0.109
   Compiling unicode-normalization v0.1.23
   Compiling socket2 v0.5.7
   Compiling digest v0.10.7
   Compiling indexmap v2.2.6
   Compiling mime_guess v2.0.4
   Compiling rand v0.8.5
   Compiling num-traits v0.2.19
   Compiling httparse v1.8.0
   Compiling tracing-core v0.1.32
   Compiling minimal-lexical v0.2.1
   Compiling ryu v1.0.18
   Compiling data-encoding v2.6.0
   Compiling idna v0.5.0
   Compiling tracing v0.1.40
   Compiling windows-link v0.2.1
   Compiling strsim v0.10.0
   Compiling spin v0.9.8
   Compiling untrusted v0.9.0
   Compiling semver-parser v0.7.0
   Compiling try-lock v0.2.5
   Compiling base64 v0.21.7
   Compiling httpdate v1.0.3
   Compiling ring v0.17.8
   Compiling semver v0.9.0
   Compiling want v0.3.1
   Compiling windows-sys v0.61.2
   Compiling url v2.5.0
   Compiling winapi v0.3.9
   Compiling sha1 v0.10.6
   Compiling http-body v0.4.6
   Compiling tower-service v0.3.2
   Compiling askama_escape v0.10.3
   Compiling byteorder v1.5.0
   Compiling smallvec v1.13.2
   Compiling nom v7.1.3
   Compiling rustc_version v0.2.3
   Compiling http v1.1.0
   Compiling num-conv v0.1.0
   Compiling scopeguard v1.2.0
   Compiling time-core v0.1.2
   Compiling mio v0.8.11
   Compiling winreg v0.50.0
   Compiling ipnet v2.9.0
   Compiling tap v1.0.1
   Compiling matches v0.1.10
   Compiling utf-8 v0.7.6
   Compiling match_cfg v0.1.0
   Compiling powerfmt v0.2.0
   Compiling hostname v0.3.1
   Compiling wyz v0.5.1
   Compiling time-macros v0.2.18
   Compiling idna v0.2.3
   Compiling deranged v0.3.11
   Compiling rustls-webpki v0.101.7
   Compiling sct v0.7.1
   Compiling rustc_version_runtime v0.2.1
   Compiling lock_api v0.4.12
   Compiling darling_core v0.13.4
   Compiling parking_lot_core v0.9.10
   Compiling radium v0.7.0
   Compiling headers-core v0.2.0
   Compiling schannel v0.1.28
   Compiling quick-error v1.2.3
   Compiling widestring v1.1.0
   Compiling zerocopy v0.7.34
   Compiling lazy_static v1.4.0
   Compiling funty v2.0.0
   Compiling linked-hash-map v0.5.6
   Compiling native-tls v0.2.14
   Compiling humansize v1.1.1
   Compiling bitvec v1.0.1
   Compiling ahash v0.8.11
   Compiling lru-cache v0.1.2
   Compiling resolv-conf v0.7.0
   Compiling headers v0.3.9
   Compiling time v0.3.36
   Compiling ipconfig v0.3.2
   Compiling parking_lot v0.12.3
   Compiling serde_derive v1.0.203
   Compiling tokio-macros v2.3.0
   Compiling futures-macro v0.3.30
   Compiling thiserror-impl v1.0.61
   Compiling async-trait v0.1.80
   Compiling pin-project-internal v1.1.5
   Compiling rustls v0.21.12
   Compiling rustls-pemfile v1.0.4
   Compiling enum-as-inner v0.4.0
   Compiling base64 v0.13.1
   Compiling scoped-tls v1.0.1
   Compiling unicode-properties v0.1.1
   Compiling hex v0.4.3
   Compiling winnow v0.5.40
   Compiling derive_more v0.99.17
   Compiling tokio v1.38.0
   Compiling darling_macro v0.13.4
   Compiling futures-util v0.3.30
   Compiling stringprep v0.1.5
   Compiling derivative v2.2.0
   Compiling typed-builder v0.10.0
   Compiling async-stream-impl v0.3.6
   Compiling socket2 v0.4.10
   Compiling darling v0.13.4
   Compiling md-5 v0.10.6
   Compiling pin-project v1.1.5
   Compiling pbkdf2 v0.11.0
   Compiling sha-1 v0.10.1
   Compiling thiserror v1.0.61
   Compiling sha2 v0.10.8
   Compiling hmac v0.12.1
   Compiling serde_with_macros v1.5.2
   Compiling tungstenite v0.21.0
   Compiling tokio-util v0.7.11
   Compiling trust-dns-proto v0.21.2
   Compiling tokio-native-tls v0.3.1
   Compiling futures-executor v0.3.30
   Compiling h2 v0.3.26
   Compiling tokio-tungstenite v0.21.0
   Compiling tokio-rustls v0.24.1
   Compiling encoding_rs v0.8.35
   Compiling sync_wrapper v0.1.2
   Compiling bitflags v1.3.2
   Compiling serde v1.0.203
   Compiling webpki-roots v0.25.4
   Compiling take_mut v0.2.2
   Compiling async-stream v0.3.6
   Compiling tokio-stream v0.1.15
   Compiling anyhow v1.0.86
   Compiling serde_repr v0.1.19
   Compiling ffxiv_types v1.10.1
   Compiling maplit v1.0.2
   Compiling trust-dns-resolver v0.21.2
   Compiling toml v0.5.11
   Compiling serde_json v1.0.117
   Compiling chrono v0.4.38
   Compiling serde_urlencoded v0.7.1
   Compiling serde_bytes v0.11.14
   Compiling toml_datetime v0.6.6
   Compiling uuid v1.8.0
   Compiling serde_spanned v0.6.6
   Compiling serde_with v1.14.0
   Compiling sestring v0.3.0
   Compiling toml_edit v0.19.15
   Compiling hyper v0.14.28
   Compiling askama_shared v0.12.2
   Compiling bson v2.10.0
   Compiling chrono-humanize v0.2.3
   Compiling toml v0.7.8
   Compiling mongodb v2.8.2
   Compiling askama_derive v0.11.2
   Compiling askama v0.11.1
   Compiling warp v0.3.7
   Compiling hyper-tls v0.5.0
   Compiling reqwest v0.11.27
   Compiling askama_warp v0.12.0
   Compiling remote-party-finder v0.1.0 (E:\FF14\Repos\MyForks\remote-party-finder\server)
error[E0432]: unresolved imports `mongodb::options::UpdateOneModel`, `mongodb::options::WriteModel`
   --> src\mongo.rs:124:24
    |
124 | use mongodb::options::{UpdateOneModel, WriteModel};
    |                        ^^^^^^^^^^^^^^  ^^^^^^^^^^ no `WriteModel` in `options`
    |                        |
    |                        no `UpdateOneModel` in `options`

warning: unused import: `crate::listing::PartyFinderCategory`
 --> src\template\listings.rs:3:5
  |
3 | use crate::listing::PartyFinderCategory;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: the feature `let_chains` has been stable since 1.88.0 and no longer requires an attribute to enable
 --> src\main.rs:2:12
  |
2 | #![feature(let_chains)]
  |            ^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0599]: no method named `bulk_write` found for struct `mongodb::Collection<T>` in the current scope
   --> src\mongo.rs:166:29
    |
166 |     let result = collection.bulk_write(writes, None).await.context("bulk upsert failed")?;
    |                             ^^^^^^^^^^ method not found in `mongodb::Collection<player::Player>`

error[E0282]: type annotations needed
   --> src\mongo.rs:166:18
    |
166 |     let result = collection.bulk_write(writes, None).await.context("bulk upsert failed")?;
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

warning: unused variable: `jp_servers`
   --> src\fflogs.rs:518:9
    |
518 |     let jp_servers = [
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jp_servers`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `remote-party-finder` (bin "remote-party-finder") generated 3 warnings
error: could not compile `remote-party-finder` (bin "remote-party-finder") due to 3 previous errors; 3 warnings emitted
